# DeFi-Scholarship

./: .gitignore  README.md  package.json
chatbot/botty/: README.md  pyproject.toml
chatbot/botty/app/: server.py
contracts/: Move.toml
contracts/sources/: main.move
frontend/: constants.ts
frontend/components/: ChatBot.tsx  Header.tsx
frontend/pages/: CreateCollection.tsx
frontend/pages/Mint/: index.tsx
frontend/pages/Mint/components/: ConnectWalletAlert.tsx
