[tool.poetry]
name = "botty"
version = "0.1.0"
description = ""
authors = ["Tanmay Deshmukh <2005.tanmaydeshmukh@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
python-dotenv = "^1.0.1"
langchain = "0.3.3"
langchain-mistralai = "0.2.0"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
fastapi = "^0.109.2"
python-multipart = "^0.0.9"
pdf2image = "^1.17.0"
pydantic = "^2.6.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
